--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 <body>
     <section>
         <h1>FLASH CARDS ON THE GO</h1>
+        <h2>Make flash cards in moments and ace that test</h2>
     </section>
 </body>
 </html>
